src/main/java/com/errors/test_errors_list/dto/ErrorResponse.java
package com.errors.test_errors_list.dto;

import java.util.List;

import lombok.AllArgsConstructor;
import lombok.Getter;
import lombok.Setter;

@Getter
@Setter
@AllArgsConstructor
public class ErrorResponse {

    private int status;
    private List<String> errors;

}
